Update to LangChain4j v1.11.0 and refactor DocumentLoader
- Upgrade LangChain4j and dependencies (Apache Tika parser, SLF4J, JUnit, AssertJ) to latest versions.
- Refactor `DocumentLoader` to use `FileSystemDocumentLoader` directly.
- Improve test robustness by adding input validation with `Objects.requireNonNull` and using `getFirst()` for clarity.